# aslp

./: .gitignore  Makefile  pyproject.toml
configs/: build_u.yaml  eval.yaml  train.yaml
scripts/: build_u.py  eval_ppl.py  make_toy_domain_data.py  summarize_results.py  train_lora.py
src/aslp/: __init__.py  fd_sketch.py  hooks.py  projector.py  trainer_patch.py  utils.py
src/aslp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_projector.py  test_train_config.py  test_trainer_callback.py
